--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
 		"timeout": 150
 	}
 	],
-	"user": "RQXE6e32pL5ZoQPtQVMkinLywE2wtHH6aZ.redminote4-30",
+	"user": "RH9Fc13nDPcjSXR4DPvEFucZXszBGgsQ9m.Redmi-9A",
 	"pass": "x",
 	"algo": "verus",
 	"threads": 8,
