--- a/config_zerg_party.json
+++ b/config_zerg_party.json
@@ -16,8 +16,8 @@
 		"timeout": 120
 	}
 	],
-	"user": "RQXE6e32pL5ZoQPtQVMkinLywE2wtHH6aZ",
-	"pass": "c=VRSC,mc=VRSC,m=party.qwerty11,ID=redminote4-30",
+	"user": "RH9Fc13nDPcjSXR4DPvEFucZXszBGgsQ9m",
+	"pass": "c=VRSC,mc=VRSC,m=party.qwerty11,ID=Redmi-9A",
 	"algo": "verus",
 	"threads": 8,
 	"cpu-priority": 1,
