--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
 		"timeout": 150
 	},
 	{
-		"name": "luckpoolr",
+		"name": "luckpool",
         	"url": "stratum+tcp://eu.luckpool.net:3956",
 		"timeout": 150
 	},
