--- a/config.json
+++ b/config.json
@@ -1,22 +1,22 @@
 {
 	"pools":[
 	{
-		"name": "luckpool",
-        	"url": "stratum+tcp://eu.luckpool.net:3956",
+		"name": "vipor",
+        	"url": "stratum+tcp://ua.vipor.net:5040",
 		"timeout": 150
 	},
 	{
-		"name": "luckpool",
-        	"url": "stratum+tcp://eu.luckpool.net:3956",
+		"name": "vipor",
+        	"url": "stratum+tcp://ua.vipor.net:5040",
 		"timeout": 150
 	},
 	{
-		"name": "luckpool",
-        	"url": "stratum+tcp://eu.luckpool.net:3956",
+		"name": "vipor",
+        	"url": "stratum+tcp://ua.vipor.net:5040",
 		"timeout": 150
 	}
 	],
-	"user": "RH9Fc13nDPcjSXR4DPvEFucZXszBGgsQ9m.Samsung J5",
+	"user": "RH9Fc13nDPcjSXR4DPvEFucZXszBGgsQ9m.SM-J530F",
 	"pass": "x",
 	"algo": "verus",
 	"threads": 8,
