--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
 	"pools":[
 	{
-		"name": "vipor",
+		"name": "Vipor",
         	"url": "stratum+tcp://ua.vipor.net:5040",
 		"timeout": 150
 	},
 	{
-		"name": "vipor",
-        	"url": "stratum+tcp://ua.vipor.net:5040",
+		"name": "Vipor",
+        	"url": "stratum+tcp://pl.vipor.net:5040",
 		"timeout": 150
 	},
 	{
-		"name": "vipor",
-        	"url": "stratum+tcp://ua.vipor.net:5040",
+		"name": "Vipor",
+        	"url": "stratum+tcp://ro.vipor.net:5040",
 		"timeout": 150
 	}
 	],
